# Vivado_CLI

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/adr/: 0001-control-vivado-through-tcl-batch-mode.md  0002-support-managed-gui-tcl-sessions.md  0003-support-trusted-local-raw-tcl.md  0004-provide-built-in-help-and-skills.md  0005-remove-mcp-adapter-and-standardize-on-cli.md
docs/agents/: domain.md  issue-tracker.md
docs/design/: vivado-cli-design.md  vivado-mcp-design.md
docs/skills/: README.md  block-design-flow.md  fileset-constraint-flow.md  gui-session.md  hardware-debug-flow.md  official-docs-reference.md  project-build-flow.md  raw-tcl-expert.md
experiments/: bridge_smoke.py  commit_fileset_flow.py  commit_tcl_assist.py  mcp_bridge.tcl  start_gui_smoke.tcl  vivado_probe.tcl
scripts/: verify-cold-clone.ps1
src/vivado_cli/: __init__.py  bd_summary.py  cli.py  cli_core.py  fileset_summary.py  gui_probe.py  hardware_summary.py  help_skills.py  nonproject_summary.py  official_docs.py  policy.py  session.py  state_diff.py  tcl.py  tcl_assist.py  tool_catalog.py  vivado_locator.py  xilinx_docs.py
src/vivado_mcp/: __init__.py  bd_summary.py  fileset_summary.py  help_skills.py  ip_summary.py  nonproject_summary.py  official_docs.py  policy.py  report_parser.py  server.py  session.py  simulation_summary.py  state_diff.py  tcl.py  tcl_assist.py  types.py  vivado_locator.py
tests/fixtures/: fake_vivado.py
tests/unit/: test_bd_summary.py  test_cli.py  test_fileset_summary.py  test_gui_probe.py  test_hardware_summary.py  (+15 more)
(+16 files in other folders)
