[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vivado-mcp"
version = "0.1.0"
description = "MCP server for controlling AMD Vivado through managed Tcl/GUI sessions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.28.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0",
]

[project.scripts]
vivado-mcp = "vivado_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vivado_mcp = [
  "assets/*.tcl",
  "skills/*.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

