[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vivado-cli"
version = "0.1.0"
description = "CLI for controlling AMD Vivado through managed Tcl/GUI sessions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=9.0",
]

[project.scripts]
vivado-cli = "vivado_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vivado_cli = [
  "assets/*.tcl",
  "skills/*.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
